--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+**/public/workbox-*.js
+**/public/sw.js
+**/public/worker-*.js
 
 # dependencies
 /node_modules
